--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     "purpose":"any"
     },
     {
-    "src":"/assetsimages/logo.svg",                     
+    "src":"/assets/images/logo.svg",                     
     "sizes":"185x185",
     "type":"image/svg",
     "purpose":"any"
