--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,12 @@
     "purpose":"any"
     },
     {
+    "src":"images/download.png",                     
+    "sizes":"225x225",
+    "type":"image/png",
+    "purpose":"any"
+    },
+    {
     "src":"images/img-220x130.png",
     "sizes":"220x130",
     "type":"image/png",
