--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Arjun's App",
     "short_name":"Arjun here",
-    "start_url":"index.html",
+    "start_url":".",
     "display":"standalone",
     "background_color":"#5900b3",
     "theme_color":"black",
